# Laboratory-work

./: .gitignore
Android-lab/lab_1/app/: build.gradle
Android-lab/lab_1/app/src/main/: AndroidManifest.xml
Android-lab/lab_1/app/src/main/java/model/: User.java
Android-lab/lab_1/app/src/main/res/layout/: activity_main.xml  activity_second.xml
Android-lab/lab_1/app/src/main/res/values/: strings.xml
Android-lab/lab_13/app/: build.gradle
Android-lab/lab_13/app/src/main/: AndroidManifest.xml
Android-lab/lab_13/app/src/main/res/layout/: activity_register.xml
Android-lab/lab_13/app/src/main/res/values/: colors.xml  strings.xml
Android-lab/lab_4/app/: build.gradle
Android-lab/lab_4/app/src/main/res/layout/: fragment_street.xml  list_item_street.xml
Android-lab/lab_4/app/src/main/res/values/: strings.xml
Android-lab/lab_6/app/: build.gradle
Android-lab/lab_6/app/src/main/: AndroidManifest.xml
Android-lab/lab_6/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_settings.xml
Android-lab/lab_6/app/src/main/res/navigation/: nav_graph.xml
Android-lab/lab_6/app/src/main/res/values/: strings.xml
Android-lab/lab_6/app/src/main/res/values-v23/: themes.xml
Android-lab/lab_7_1/app/: build.gradle
Android-lab/lab_7_1/app/src/main/res/layout/: activity_main.xml  fragment_add_street.xml  fragment_street.xml
Android-lab/lab_7_1/app/src/main/res/values/: strings.xml
Android-lab/lab_8/app/: build.gradle
Android-lab/lab_8/app/src/main/res/values/: strings.xml
Android-lab/lab_9/app/: build.gradle
Android-lab/lab_9/app/src/main/: AndroidManifest.xml
Back-end-lab/lab2.local/: activate.php  db_config.php  db_connect.php  index.php  lab2_db.sql  login.php  register.php
Back-end-lab/lab2.local/.osp/: project.ini
Back-end-lab/lab6.local/: db_config.php  index.php  lab6_db.sql
Back-end-lab/lab6.local/.osp/: project.ini
Back-end-lab/lab7.local/: db_config.php  index.php  lab7_db.sql
Back-end-lab/lab7.local/.osp/: project.ini
Back-end-lab/lab_3/: package-lock.json  package.json
Back-end-lab/lab_4/: package-lock.json  package.json
Back-end-lab/lab_4/src/: App.js
Back-end-lab/lab_4/src/main/: Register.css  Register.js
Back-end-lab/lab_5/: package-lock.json  package.json
Back-end-lab/lab_5/src/: App.css  App.js
Back-end-lab/lab_8/node-postgres/: backup.sql  index.js  package-lock.json  package.json
Back-end-lab/lab_8/node-postgres/models/: merchant_model.js
Back-end-lab/lab_8/node-postgres/react-postgres/: package-lock.json  package.json
Back-end-lab/lab_8/node-postgres/react-postgres/src/: App.js  index.js
Front-end-lab/lab_2/: index.html
Front-end-lab/lab_2/style/: styles.css
Front-end-lab/lab_3/: index.html
Front-end-lab/lab_3/style/: styles.css
Front-end-lab/lab_4/: index.html
Front-end-lab/lab_4/style/: styles.css
Front-end-lab/lab_5/: index.html
Front-end-lab/lab_5/scripts/: script.js
Front-end-lab/lab_5/style/: styles.css
Front-end-lab/lab_6/: index.html
Front-end-lab/lab_6/style/: styles.css
Front-end-lab/lab_7/: index.html
Front-end-lab/lab_7/style/: styles.css
Front-end-lab/lab_8/: index.html
Front-end-lab/lab_8/scripts/: script.js
Front-end-lab/lab_8/style/: styles.css
Functional/lab1/: Ackermann.hs  Factorial.hs  Rating.hs
Functional/lab2/: Main.hs
Functional/lab3/: Main.hs
Functional/lab4/: Main.hs  Schedule.hs
IDK/lab2/: .clang-format  .gitignore  CMakeLists.txt  Makefile
IDK/lab2/src/: output_numbers.cpp  output_numbers_simple.cpp  sort_array.cpp
IDK/lab3/: .clang-format  .gitignore  Makefile  matrix_log.txt
IDK/lab3/src/float_calc/: Operation.cpp  Operation.h  Processor.cpp  Processor.h  main.cpp
IDK/lab3/src/matrix_multiplier/: MatrixMultiplier.cpp  MatrixMultiplier.h  main.cpp  utils.hpp
IDK/lab4/: CMakeLists.txt  CMakePresets.json  Makefile
IDK/lab4/src/: listing-2-1.cpp
IDK/pr1/: CMakeLists.txt  Makefile
IDK/pr1/src/: atomic_version.cpp  mutex_version.cpp  unsafe_version.cpp
IDK/pr2/: Makefile
IDK/pr2/src/: deadlock.cpp  scopedlock.cpp
Model-lab/: .gitignore
Model-lab/sem_6/Lab_2.1/: Lab_2.1.cpp  tridiagonal_solution.txt
Model-lab/sem_6/lab_1/: lab_1.cpp  solution_data.txt
Model-lab/sem_6/lab_10/: lab_10.sln  lab_10.vcxproj  linear.csv  main.cpp  no_resistance.csv  quadratic.csv
Model-lab/sem_6/lab_7/: lab_7.sln  lab_7.vcxproj  main.cpp
Patterns-lab/: .gitignore
Patterns-lab/10_Command/: 10_Command.sln  10_Command.vcxproj  Command.h  main.cpp
Patterns-lab/11_Observer/: 11_Observer.sln  11_Observer.vcxproj  concrete_observer.hpp  concrete_subject.hpp  main.cpp  observer.hpp  subject.hpp
Patterns-lab/12_State/: 12_State.sln  12_State.vcxproj  main.cpp  tcp_closed.hpp  tcp_connection.hpp  tcp_established.hpp  tcp_listen.hpp  tcp_state.hpp
Patterns-lab/7_Composite/: 7_Composite.sln  7_Composite.vcxproj  Composite.h
Patterns-lab/8_Decorator/: 8_Decorator.sln  8_Decorator.vcxproj
Patterns-lab/9_Facade/: 9_Facade.sln  9_Facade.vcxproj  Facade.h  main.cpp
RAD/lab6/: CMakePresets.json
RAD/lab6/src/graph/: graph.cpp  graph.h  main.cpp  matrix.txt
React/lab1/: package-lock.json
React/lab1/src/: App.css  App.jsx
React/lab1/src/components/: UserCard.jsx  UserList.jsx  user-card.css  user-list.css
React/lab2/: index.html  package-lock.json
React/lab2/src/: App.jsx  main.jsx
React/lab2/src/components/CategoryFilter/: CategoryFilter.jsx  CategoryFilter.module.css
React/lab2/src/components/Stats/: Stats.jsx  Stats.module.css
React/lab2/src/components/TaskForm/: TaskForm.jsx  TaskForm.module.css
React/lab2/src/components/TaskItem/: TaskItem.jsx  TaskItem.module.css
React/lab2/src/components/TaskList/: TaskList.jsx  TaskList.module.css
React/lab2/src/components/common/Button/: Button.jsx  Button.module.css
React/lab2/src/components/common/Checkbox/: Checkbox.jsx  Checkbox.module.css
React/lab2/src/components/common/Input/: Input.jsx  Input.module.css
React/lab2/src/contexts/: TaskContext.jsx
React/lab2/src/hooks/: useTasks.js
React/lab2/src/styles/: globals.css
React/lab2/src/utils/: constants.js
(+68 files in other folders)
